# fpm

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  conanfile.py  library.json
.github/workflows/: main.yml
accuracy/: accuracy.cpp  accuracy.gnuplot
benchmarks/: arithmetic.cpp  benchmark.gnuplot  benchmark.py  power.cpp  trigonometry.cpp
docs/: Gemfile  _config.yml  accuracy.md  index.md  performance.md
include/fpm/: fixed.h  fixed.hpp  ios.h  ios.hpp  math.h  math.hpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: arithmethic.cpp  arithmetic.cpp  arithmetic_int.cpp  basic_math.cpp  classification.cpp  common.h  common.hpp  constants.cpp  conversion.cpp  customizations.cpp  detail.cpp  input.cpp  ios.cpp  manip.cpp  nearest.cpp  output.cpp  power.cpp  trigonometry.cpp
